deployment/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulations-production
spec:
  selector:
    matchLabels:
      app: simulations
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: simulations
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/simulations:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /prometheus-client
          name: prometheus-client
        readinessProbe:
          httpGet:
            path: /simulations/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "2000m"
      volumes:
      - name: prometheus-client
        emptyDir: {}
