deployment/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simulations-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /simulations
        backend:
          serviceName: simulations-production
          servicePort: 80
